# reasoning_over_slaterecs

./: .gitignore  README.md  pyproject.toml
src/reasoning_over_slaterecs/: finn_item_embeddings.ipynb  finn_no.ipynb
src/reasoning_over_slaterecs/mind_dataset/: analysis.ipynb  dataset_processing.ipynb  llm_gen_slates.py  llm_reasoning.ipynb  llm_slates.py  llm_users.py  load_slates_rl_data.ipynb  results.ipynb
src/reasoning_over_slaterecs/mind_dataset/agent_modeling/: dqn_agent.py  slate_generator.py
src/reasoning_over_slaterecs/mind_dataset/user_modelling/: choice_model.py  ncf.py  user_state.py
src/scripts/: simulation_imports.py
src/scripts/mind_serving_tests/: wp_slate_test.py
