[project]
name = "reasoning-over-slaterecs"
version = "0.1.0"
description = ""
authors = [
    {name = "Asr419",email = "asrthebest17@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.5.1,<3.0.0)",
    "recsys-slates-dataset (>=1.0.3,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pyarrow (>=19.0.0,<20.0.0)",
    "openai (>=1.60.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
